# ChangeLog for kde-base/kdeplasma-addons
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  22 Aug 2010; <alunduil@gentoo.org> ChangeLog:
  Added app-crypt/qca-ossl as a dependency for microblog
