@@ -4,7 +4,9 @@ AUX kdeplasma-addons-4.4.74-cmake.patch 2623 RMD160 dd1fc6913c715184fdb4e0681507
 AUX microblog_1145842.patch 744 RMD160 0876d38b01bb16969bf22ff75dddb36a50c0e125 SHA1 9113788eb3b56315a28381a51b55b9e77ec33b39 SHA256 41440351cd4515793da1acfb8f07f37144d44119d0ff8199ace99e5cbb154d82
 DIST kdeplasma-addons-4.4.5.tar.bz2 1651834 RMD160 59d4d1e164db17eff7d22870aff2dddbcc3e2977 SHA1 2b17460fe0c559f6c575a7ccd72357bcc82826d6 SHA256 adbbd5efc53e27c9baee13d01a6b328875c09bfaf9e711e33cc22ef294b32ff3
 DIST kdeplasma-addons-4.5.0.tar.bz2 1746437 RMD160 88dfa5b81370a1e02643f15f71c6c3b063212e2f SHA1 48386ebf8a049f2456bf0e88ba46fced0351cd02 SHA256 06c668f8cf54e79216b9007a8a7e095bb837f235ab0e1bdf339f625d0c651fec
+DIST kdeplasma-addons-4.5.1.tar.bz2 1752487 RMD160 b77e81430271ae50dfb36f624cc8254c5490fbc8 SHA1 c3418fc1e524c1a7a4effbdd7316f922d81f02ad SHA256 e5d2c3e448f2737796e6aacb5522452be2d97f430003e012159f3dd7b098b29e
 EBUILD kdeplasma-addons-4.4.5-r1.ebuild 2288 RMD160 bf2af3d87d4c709d868c5d0d60ead78af231d5ee SHA1 5ec648131524ab6982518c9ce638d54265bb2993 SHA256 4b65ad242bf36536bff49f3522eafcbdccdf1bd3aca102f7340c273068a0f3a2
 EBUILD kdeplasma-addons-4.5.0-r1.ebuild 2107 RMD160 d64ed17f4dbbd18a462513a2b0e3b343df9555bf SHA1 471d42da1d8bcc9407c044f09ca2459b46f32623 SHA256 46a058b7b0f6de919efcf15056da2aff39187f315cbabc038ec112451558c069
-MISC ChangeLog 232 RMD160 03bf0954d2c0cf32c575fb082d3ab91f8878519f SHA1 bccff82d16980b648a1310ddf695113dcffb5cef SHA256 f433d6ad31d4755f28eae48ec385c44e596a8b89910e7e42fb5a54370657d4b0
+EBUILD kdeplasma-addons-4.5.1-r1.ebuild 2107 RMD160 0501eb55f76d6a8f82ee77eb65c397d64467b9a7 SHA1 2301ac724dc65851ee993095319093caf4776b5a SHA256 80b094484cdcf3cca21619b5b6a177d331f578e5d900c794155c3047abc23e92
+MISC ChangeLog 390 RMD160 17a6e28e23b2a684394153ac8dcdcd30697f25ed SHA1 d95722dd7e3ae11eb9dc5f6102f97687dc17d3c8 SHA256 d48039bce72386fc2cac3daa754c363d0183d073222a8e943a0516d0c23d0f7d
 MISC metadata.xml 656 RMD160 91dc485413c11599770fbd93494b94e7fabb6b4a SHA1 e286d028dcd39811f17715e246b2899305bed20c SHA256 600a80a8826a23ca65bf6dff480bddc71a5c59f184272868768c30bca85c28f6
